# ibeacon

./: .gitignore  CMakeLists.txt
design/: pesudo_code.txt
docs/: CMakeLists.txt  mainpage.md
html/: 404.html  about.html
ibeacon/: README.md  pubspec.yaml
ibeacon/android/app/: build.gradle
ibeacon/android/app/src/main/: AndroidManifest.xml
ibeacon/android/app/src/main/java/com/bcit/dc/ibeacon/: MainActivity.java
ibeacon/android/app/src/profile/: AndroidManifest.xml
ibeacon/ios/Runner/: Info.plist
ibeacon/ios/Runner.xcodeproj/: project.pbxproj
ibeacon/lib/: main.dart
ibeacon/test/: widget_test.dart
ibeacon/web/: index.html  manifest.json
ibeacon/windows/: CMakeLists.txt
ibeacon/windows/runner/: Runner.rc  main.cpp
include/: client.h  common.h  db.h  http.h  ib_cli.h  ibeacon.h  server.h
include/http/: http.h  http_constants.h  http_parse.h  http_request.h  http_response.h
src/: CMakeLists.txt  README.md  client.c  client.h  common.c  common.h  db.c  db.h  http.c  http.h  http_parse.c  ib_cli.c  ibeacon.c  ibeacon.h  ncurse_cli.c  server.c  server.h
src/IbeaconAndroid/: local.properties
src/http/: http.c  http_parse.c  http_request.c  http_response.c
tests/: CMakeLists.txt  main.c
